add reading from calendar

--- a/Android Application/app/src/main/res/values/strings.xml
+++ b/Android Application/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
         <item>Green</item>
         <item>Yellow</item>
     </string-array>
+    <string name="title_activity_show_calendar_events">ShowCalendarEvents</string>
 </resources>
