--- a/SmartBadgesAppAndroid/app/src/main/res/values/strings.xml
+++ b/SmartBadgesAppAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SmartBadgeApp</string>
+    <string name="channel_name">SmartBadgeApp</string>
+    <string name="channel_description">SmartBadgeAppDescription</string>
+
 </resources>
