--- a/SmartBadgesAppAndroidBluetooth/app/src/main/res/values/strings.xml
+++ b/SmartBadgesAppAndroidBluetooth/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!--<string name="channel_description">SmartBadgeAppDescription</string>-->
 <!--</resources>-->
 <resources>
-    <string name="app_name">bling:meB</string>
-    <string name="channel_name">bling:me</string>
-    <string name="channel_description">SmartBadgeAppDescription</string>
+    <string name="app_name">bling:meBV2</string>
+    <string name="channel_name">bling:meV2</string>
+    <string name="channel_description">SmartBadgeAppDescriptionV2</string>
 </resources>
